REMOJU-510 プランスポット一覧　指定されたパラメータで絞り込みされない

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar-row>
       <span class="logo">
         <!-- Remoju -->
-        <a routerLink="planspot" style="min-height:54px;">
+        <a (click)="onNavgateRemoju()" style="min-height:54px;">
           <img src="../../../assets/img/remoju-logo-b.svg" class="imgsp" alt="remoju-app" />
         </a>
       </span>
