--- a/src/app/parts/nav-menu/nav-menu.component.html
+++ b/src/app/parts/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <!-- Navigation start -->
 <nav class="navbar" role="navigation">
     <div class="navbar-header">
-      <a class="navbar-brand lower" href="/">
+      <a class="navbar-brand lower" (click)="onNavgate('planspot', null, true)">
         <img src="../../../assets/img/remoju-logo-b.svg" alt="remoju-app" width="106" height="27" />
       </a>
     </div>
