--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -629,6 +629,13 @@ form {
                   .areaName {
                     font-size: 11px;
                     color: #a6a29e;
+                    .stayTime{
+                      select{
+                        border-radius: 9px;
+                        background-color: #707070;
+                        color: #fff;
+                      }
+                    }
                   }
 
                   .sugtime {
@@ -1182,13 +1189,23 @@ form {
               }
 
               div {
-                span {
+                span.starttime {
                   border: 1px solid #DE7274;
                   padding: 1px 6px;
                   margin-right: 0.2em;
                   font-size: 12px;
                   color: #DE7274;
                   border-radius: 0.2em;
+                }
+                span.sugtime{
+                  font-size: 12px;
+                }
+                span.stayTime{
+                  select{
+                    border-radius: 9px;
+                    background-color: #707070;
+                    color: #fff;
+                  }
                 }
               }
             }
