--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -552,6 +552,7 @@ form {
 
             dt {
               text-align: center;
+              position: relative;
 
               &:nth-child(1) {
                 flex-basis: 12%;
@@ -578,6 +579,12 @@ form {
               &:nth-child(2) {
                 flex-basis: 72%;
                 display: flex;
+
+                .clickable {
+                  position: absolute;
+                  width: 100%;
+                  height: 50%;
+                }
 
                 .lt {
                   position: relative;
@@ -629,8 +636,9 @@ form {
                   .areaName {
                     font-size: 11px;
                     color: #a6a29e;
-                    .stayTime{
-                      select{
+
+                    .stayTime {
+                      select {
                         border-radius: 9px;
                         background-color: #707070;
                         color: #fff;
@@ -1197,11 +1205,13 @@ form {
                   color: #DE7274;
                   border-radius: 0.2em;
                 }
-                span.sugtime{
+
+                span.sugtime {
                   font-size: 12px;
                 }
-                span.stayTime{
-                  select{
+
+                span.stayTime {
+                  select {
                     border-radius: 9px;
                     background-color: #707070;
                     color: #fff;
