--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -142,7 +142,7 @@
                   </button>
                 </dt>
                 <dt>
-                  <div class='clickable' (click)="onClickSpotEdit(item)"></div>
+                  <div class='clickable' (click)="onClickSpotEdit(item)"ï></div>
                   <div class="lt">
                     <span class="order">{{ item.displayOrder }}</span>
                     <ng-container *ngIf="item.planUserpictures && item.planUserpictures.length > 0; else spotPicture">
