--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -158,7 +158,7 @@
               <img [src]="item.googleSpot.picture_url" alt="" />
             </ng-container>
             <ng-template #noImage>
-              <img src="../../../../../assets/images/noimg.png" alt="noImage">
+              <img src="../../../../../assets/img/nopict.png" alt="noImage">
             </ng-template>
           </div>
         </div>
