--- a/src/app/pages/mypage-planlist/mypage-planlist.component.scss
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.scss
@@ -712,68 +712,53 @@ span.sortlink {
       margin-right: 12px;
       margin-left: 12px;
 
-      .pics {
-        ::ng-deep.owl-carousel {
-          margin: 2px 0px 12px 10px;
-          padding: 0;
+      .picgrid{
+        display: grid;
+        grid-template-columns: repeat(4,22.5vw);
+        grid-row-gap: 12px;
+        column-gap: 6px;
+        margin-top: 12px;
+        .thumbspots{
+          position: relative;
+          .thumbnum {
+            position: absolute;
+            height: 25px;
+            width: 20px;
+            left: 0px;
+            top: -9px;
+            line-height: 18px;
+            text-align: center;
+            background-image: url("../../../assets/img/pin_red.svg");
+            background-repeat: no-repeat;
 
-
-          ::ng-deep.owl-item {
-            position: relative;
-            // width: 25%!important;
-
-            .thumbspots {
-              .thumbnum {
-                position: absolute;
-                height: 25px;
-                width: 20px;
-                left: 5px;
-                top: 0;
-                line-height: 18px;
-                text-align: center;
-                background-image: url("../../../assets/img/pin_red.svg");
-                background-repeat: no-repeat;
-
-                span {
-                  color: white;
-                  font-size: 12px;
-                }
-              }
-
-              // display: inline-flex !important;
-
-              img {
-                margin-top: 10px;
-                width: 100%;
-                height: 24.5vw;
-                object-fit: cover;
-                border-radius: 5px;
-                @include copy-protect;
-
-                @media screen and (min-width: 1025px) {
-                  height: 10.5vw;
-                }
-              }
-            }
-
-            .thumbname {
-              overflow: hidden;
-
-              span {
-                display: block;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                font-size: 11px;
-                color: #baa169;
-              }
+            span {
+              color: white;
+              font-size: 12px;
             }
           }
+          .pic{
+            height: 23vw;
+            overflow: hidden;
+            img{
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+          }
+          
         }
 
-        ::ng-deep .owl-carousel .owl-stage {
-          padding-left: 0 !important;
+        .thumbname {
+          overflow: hidden;
 
+          span {
+            display: block;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            font-size: 11px;
+            color: #baa169;
+          }
         }
       }
 
