--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -21,6 +21,13 @@ infinite-scroll
       {{ 'GoogleSearchAny' | translate }}<br>
       {{ 'ReplaceKeyword' | translate }}<br>
       {{ 'includedPlan' | translate }}
+
+      <div class='alert' *ngIf="condition.keyword">
+        <p>フリーキーワード<span>{{condition.keyword}}</span>で検索中です。</p>
+        
+      </div>
+
+      
     </mat-card-content>
   </mat-card>
   <mat-card id="nolist" *ngIf="!isList && condition.select==='user'">
