--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -399,7 +399,7 @@ div.plandtl {
         //@media screen and (min-width: 415px) and (max-width: 1024px) {
         @media screen and (min-width: 429px) {
           .thumbspots {
-            height: 20.4vw;
+            height: 172px;
           }
         }
 
