--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -24,4 +24,4 @@
   >
   </app-planspot-list-item>
 </app-planspot-list>
-<!-- <ngx-loading [show]="loading"></ngx-loading> -->
+<ngx-loading [show]="loading"></ngx-loading>
