--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -232,7 +232,8 @@ div.spotdtl {
 
     .thumbnail {
       display: inline-flex !important;
-      height: 12vh;
+      //height: 12vh;
+      height: 100px;
       border-radius: 6px;
       overflow: hidden;
 
@@ -305,8 +306,9 @@ div.spotdtl {
 
   @media screen and (min-width: 1025px) {
     div.container {
-      height: calc(100vh - 278px);
+      height: calc(100vh - 96px);
       overflow-y: scroll;
+      overflow-x: hidden;
       position: relative;
 
       .scroll-to-top {
