--- a/src/assets/scss/_styles.scss
+++ b/src/assets/scss/_styles.scss
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   touch-action: pan-x pan-y;
   -webkit-touch-callout:none; /* リンク長押しのポップアップを無効化 */
+  //overflow-x: none;
 }
 
 body {
