--- a/src/app/pages/mypage/mypage.component.scss
+++ b/src/app/pages/mypage/mypage.component.scss
@@ -98,9 +98,9 @@
 
         &:nth-of-type(2) {
           .mat-tab-label-content::before {
-            content: url("../../../assets/img/icon_myfav2.svg");
-            width: 314px;
-            height: 31px;
+            content: url("../../../assets/img/icon_bookmark_m.svg");
+            width: 28px;
+            height: 28px;
             margin-right: 6px;
           }
         }
