--- a/src/app/parts/google-spot-dialog/google-spot-dialog.component.scss
+++ b/src/app/parts/google-spot-dialog/google-spot-dialog.component.scss
@@ -33,9 +33,9 @@
     mat-dialog-content{
       .caption{
         font-size: 12px;
-        background-color: #FDF2C9;
+        background-color:#ceead6  ;
         padding: 4px;
-        border-radius: 10px;
+        border-radius: 5px;
         
       }
       .form{
