--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -443,6 +443,10 @@
         <span class="sufix">{{ "EndTime" | translate  }}</span>{{ endTime }}
       </mat-list-item>
     </mat-list>
+    <div class="rec-memo" *ngIf="row.memo">
+      <p>{{row.memo}}</p>
+      <label>memo</label>
+    </div>
   </div>
   <div class="footer">
     <!-- 共有先 -->
