--- a/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
+++ b/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
@@ -16,7 +16,7 @@
   <mat-form-field appearance="outline">
     <mat-label>{{ 'TravelBookmark' | translate }}</mat-label>
     <textarea matInput #planExplanation name="planExplanation" maxlength="1000" rows="5"
-      placeholder="{{ 'PlanExplanationEx' | translate }}" #inputinfo="ngModel"
+      #inputinfo="ngModel"
       [(ngModel)]="row.planExplanation"></textarea>
     <mat-hint align="end">{{planExplanation.value?.length || 0}}/1000{{ "Characters" | translate }} &nbsp;<a
         href="javascript:void(0);" (click)="row.planExplanation='';"><span
@@ -24,12 +24,12 @@
   </mat-form-field>
   <!-- フリー文章 -->
   <div class='sub item'>
-    memo / message
+    memo
   </div>
   <mat-form-field appearance="outline">
     <mat-label>{{ 'Memo' | translate }}</mat-label>
     <textarea matInput #memo name="memo" maxlength="1000" rows="5"
-      placeholder="{{ 'FreeMemoEx' | translate }}" #inputinfo="ngModel" [(ngModel)]="row.memo"></textarea>
+      #inputinfo="ngModel" [(ngModel)]="row.memo"></textarea>
     <mat-hint align="end">{{memo.value?.length || 0}}/1000{{ "Characters" | translate }}&nbsp;<a
         href="javascript:void(0);" (click)="row.memo='';"><span class="material-icons">backspace</span></a>
     </mat-hint>
@@ -77,4 +77,5 @@
     <button (click)="mep.expanded = false;">{{ 'Close' | translate}}</button>
   </div> -->
   <button type="button" mat-dialog-close="cancel" class="absclose">{{"Close"|translate}}</button>
+  <button type="button" mat-dialog-close="cancel" class="abscloseb">{{"Close"|translate}}</button>
 </div>
