--- a/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
+++ b/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
@@ -9,9 +9,9 @@
       <div id="swImg"></div>
     </div>
   </div>
-  <div class='row'>
+  <!-- <div class='row'>
     <span class='small'>{{ 'AgeAnnounced' | translate }}{{ 'SetBirthday' | translate }}</span>　
-  </div>
+  </div> -->
 </div>
 
 <form [formGroup]="myForm" (ngSubmit)="onClickUpdate()" id="uprof">
