--- a/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
+++ b/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
@@ -11,7 +11,7 @@
   </mat-form-field>
   <!-- プラン概要 -->
   <div class='sub item'>
-    Point
+    note
   </div>
   <mat-form-field appearance="outline">
     <mat-label>{{ 'TravelBookmark' | translate }}</mat-label>
