--- a/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.html
+++ b/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.html
@@ -10,7 +10,7 @@
   </mat-form-field>
 
   <div class='sub item'>
-    Point
+    note
   </div>
   <mat-form-field appearance="outline" class="memo">
     <textarea matInput #memo name="memo" maxlength="1000" rows="5" placeholder="{{ 'SpotExplanationEx' | translate }}"
@@ -64,5 +64,6 @@
     </div>
   </div>
   <button type="button" mat-dialog-close="cancel" class="absclose">{{"Close"|translate}}</button>
+  <button type="button" mat-dialog-close="cancel" class="abscloseb">{{"Close"|translate}}</button>
 </div>
 
