--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -584,6 +584,7 @@ form {
                   position: absolute;
                   width: 100%;
                   height: 50%;
+                  cursor: pointer;
                 }
 
                 .lt {
