REMOJU-571 プラン作成　順番を変えてもダメな時がある

--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -38,7 +38,7 @@
         </div>
       </div>
 
-      <div class='transport' (click)="$event.stopPropagation()">
+      <div class='transport'>
         <div class='lt'>
           <span class="label">{{"TravelRoute"|translate}}</span>
           <div class="switchTran" [ngClass]="{'en':lang==='en'}">
@@ -263,7 +263,7 @@
       </mat-card-header>
     </mat-card>
 
-    <div class='transport' (click)="$event.stopPropagation()">
+    <div class='transport'>
       <div class='lt'>
         <span class="label">{{"TravelRoute"|translate}}</span>
         <div class="switchTran" [ngClass]="{'en':lang==='en'}">
