REMOJU-567 リリース前テスト１

--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -71,7 +71,7 @@
         </div>
         <div class='rt'>
           <div class="view">
-            {{ data.pvQty }}<span>View</span>
+            <span>{{'View'|translate}}{{ data.pvQty }}{{ 'Man' | translate}}</span>
           </div>
         </div>
       </div>
