--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -57,7 +57,7 @@
                 {{'PostedDate'|translate}}：{{item.releaseCreateDatetime | date:'yyyy/MM/dd'}}
               </span>
               <span class='view'>
-                {{item.pvQtyAll}} view
+                {{'View'|translate}}：{{item.pvQtyAll}} {{ 'Man' | translate}}
               </span>
             </div>
             <div class='row'>
