--- a/src/app/pages/spot-detail/spot-detail.component.html
+++ b/src/app/pages/spot-detail/spot-detail.component.html
@@ -69,7 +69,7 @@
         </div>
         <div class='rt'>
           <div class="view">
-            {{ data.pvQty }}<span>view</span>
+            <span>{{'View'|translate}}{{ data.pvQty }}{{ 'Man' | translate}}</span>
           </div>
         </div>
       </div>
