--- a/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
+++ b/src/app/pages/planspot/components/search-dialog/search-dialog.component.html
@@ -14,7 +14,7 @@
   <mat-dialog-content id="searchdialog">
     <mat-tab-group [selectedIndex]="tabIndex" (selectedIndexChange)="onTabChanged($event)">
       <mat-tab translate label="{{ 'Areas' | translate }}">
-        <mat-accordion [multi]="true" formArrayName="areas" *ngIf="data.isGoogle" [ngClass]="{'gg':data.isGoogle}">
+        <!--<mat-accordion [multi]="true" formArrayName="areas" *ngIf="data.isGoogle" [ngClass]="{'gg':data.isGoogle}">
           <mat-expansion-panel
             *ngFor="let item of areas.controls; let i = index"
             [formGroupName]="i"
@@ -30,7 +30,7 @@
               </div>
             </mat-expansion-panel-header>
           </mat-expansion-panel>
-        </mat-accordion>
+        </mat-accordion>-->
 
         <mat-accordion [multi]="true" formArrayName="areas" *ngIf="!data.isGoogle">
           <mat-expansion-panel
