REMOJU-575 リリース前テスト40

--- a/src/app/pages/mypage/mypage.component.html
+++ b/src/app/pages/mypage/mypage.component.html
@@ -18,7 +18,7 @@
   <mat-tab label="{{ 'UserProfile' | translate }}">
     <app-mypage-userprofile *ngIf="profile"></app-mypage-userprofile>
   </mat-tab>
-  <mat-tab label="{{ 'Review' | translate }}">
+  <!--<mat-tab label="{{ 'Review' | translate }}">
     <app-mypage-reviewlist [name]="userName"></app-mypage-reviewlist>
-  </mat-tab>
+  </mat-tab>-->
 </mat-tab-group>
