--- a/src/app/pages/spot-detail/spot-detail.component.html
+++ b/src/app/pages/spot-detail/spot-detail.component.html
@@ -112,12 +112,12 @@
 
     <mat-card id="util">
       <mat-card-content>
-        <div class='comment'>
+        <!--<div class='comment'>
           <a pageScroll href="#review" [pageScrollOffset]="80" [pageScrollDuration]="625">
             {{ "Review" | translate }}
             <span>{{ reviewQty }}</span>{{ "Count" | translate }}
           </a>
-        </div>
+        </div>-->
         <div class='favorite'>
           <button mat-button class="add-to-favorite" [ngClass]="{'on':data.isThanks}" (click)="onClickThanks()">
           </button>
@@ -232,8 +232,8 @@
       </mat-card-content>
     </mat-card>
 
-    <app-comment-list-post-panel *ngIf="reviewResult" [reviewResult]="reviewResult" [type]="1" [id]="data.spotId" (onCommentUpd)="onCommentUpd($event)">
-    </app-comment-list-post-panel>
+    <!--<app-comment-list-post-panel *ngIf="reviewResult" [reviewResult]="reviewResult" [type]="1" [id]="data.spotId" (onCommentUpd)="onCommentUpd($event)">
+    </app-comment-list-post-panel>-->
 
     <mat-card id="nearbySpot" class="pics">
       <mat-card-header>
