--- a/src/app/parts/nav-menu/nav-menu.component.html
+++ b/src/app/parts/nav-menu/nav-menu.component.html
@@ -68,6 +68,7 @@
           <a mat-list-item (click)="onNavgate('offcial/about')">{{ "About" | translate }}</a>
           <a mat-list-item  (click)="onNavgate('offcial/guide')">{{ "Guide" | translate }}</a>
           <a mat-list-item  (click)="onNavgate('offcial/privacy')">{{ "Policy" | translate }}</a>
+          <!-- <a mat-list-item  (click)="onNavgate('offcial/contact')">{{ "Contact" | translate }}</a> -->
         </mat-nav-list>
       </mat-nav-list>
     </div>
