--- a/src/app/pages/offcial/contact-form/contact-form.component.html
+++ b/src/app/pages/offcial/contact-form/contact-form.component.html
@@ -19,6 +19,8 @@
   </textarea>
         </div>
         <button type="submit" class="btn btn-primary" [disabled]="!FormData.valid">Submit</button>
+
+        <button type="button"></button>
       </form>
     </div>
   </div>
