--- a/src/app/pages/offcial/contact-form/contact-form.component.html
+++ b/src/app/pages/offcial/contact-form/contact-form.component.html
@@ -2,7 +2,7 @@
   <h2 class="text-center mb-5">Angular Contact Form Hosted On FireBase</h2>
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <form [formGroup]="FormData" (ngSubmit)="onSubmit(FormData.value)">
+      <form [formGroup]="contactForm" (ngSubmit)="onSubmit(contactForm.value)">
         <div class="form-group">
           <label for="Email">Email</label>
           <input type="email" class="form-control" name="Email" aria-describedby="emailHelp" placeholder="Enter email"
@@ -18,7 +18,7 @@
           <textarea class="form-control" formControlName="Comment" name="Comment">
   </textarea>
         </div>
-        <button type="submit" class="btn btn-primary" [disabled]="!FormData.valid">Submit</button>
+        <button type="submit" class="btn btn-primary" [disabled]="!contactForm.valid">Submit</button>
 
         <button type="button"></button>
       </form>
